<resources>
    <string name="app_name">FaceRace</string>
    <string name="login_title">FaceRace</string>
    <string name="login_text">Login</string>
    <string name="password_text">Password</string>
    <string name="play_button">Start</string>
    <string name="startGame_text">Start Game!</string>
    <string name="guess_item_text">Select</string>
    <string name="guess_prompt">Who appeared in the array of faces?</string>
    <string name="leaderboard_button_text">Go to Leaderboard</string>
    <string name="forgot_pass_text">Forgot Password?</string>
    <string name="register_textView">New User? Register Here</string>
    <string name="login_button">Login</string>
    <string name="email_editText">Email</string>
    <string name="password_editText">Password</string>
    <string name="register_button_text">Register</string>
    <string name="name">Name</string>
    <string name="email_login">Email</string>
    <string name="logout_button">Logout</string>
    <string name="reset_pass_button">Reset Password</string>
    <string name="reset_pass_textView">Reset Your Password Here!</string>
    <string name="game_label">Game</string>
    <string name="home_label">Home</string>
    <string name="profile_label">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_label">Settings</string>
    <string name="email_profileFrag">Email: </string>
    <string name="name_profileFrag">Name:</string>
    <string name="display_name_profileFrag">Display name:</string>
    <string name="my_info_profileFrag">My Info</string>
    <string name="hello">Hello</string>
    <string name="score">Your Score is:</string>
    <string name="game_rules">Select the face that you think appeared in the previous screen by pressing the button below the face. If it is green, you have selected that face. You can also double tap to deselect a face.</string>
    <string name="memorise_rules">On this screen, try memorizing all of the faces that are shown. Some of them may or may not show up in the next screen. Good Luck!</string>
    <string name="good_job">Good Job!</string>
    <string name="memorise_here_label">Memorize the faces here!</string>
    <string name="continue_button">Continue</string>
    <string name="zero_string">0</string>
    <string name="score_out_of_5">/5 !</string>
</resources>