<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/title_textView_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/app_name"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/name_editText_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="58dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/title_textView_register"
        app:layout_constraintTop_toBottomOf="@+id/title_textView_register" />

    <EditText
        android:id="@+id/email_editText_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="49dp"
        android:ems="10"
        android:hint="@string/email_editText"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="@+id/name_editText_register"
        app:layout_constraintTop_toBottomOf="@+id/name_editText_register" />

    <EditText
        android:id="@+id/password_editText_registerScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:ems="10"
        android:hint="@string/password_editText"
        android:inputType="textVisiblePassword"
        app:layout_constraintStart_toStartOf="@+id/email_editText_register"
        app:layout_constraintTop_toTopOf="@+id/progressBar_register" />

    <Button
        android:id="@+id/register_button_registerScreen"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="140dp"
        android:onClick="onClick"
        android:text="@string/register_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar_register"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="@+id/password_editText_registerScreen"
        app:layout_constraintStart_toStartOf="@+id/password_editText_registerScreen"
        app:layout_constraintTop_toBottomOf="@+id/email_editText_register" />

</androidx.constraintlayout.widget.ConstraintLayout>