<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GameActivity">

    <FrameLayout
        android:id="@+id/frameLayout_game"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/blue_bg"
        app:layout_constraintBottom_toTopOf="@+id/fragmentContainerView_main"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:text="@string/guess_prompt"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/game_rules" />

    <Button
        android:id="@+id/button_game_continue"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/continue_button" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_game"
        android:layout_width="match_parent"
        android:layout_height="420dp">

    </androidx.recyclerview.widget.RecyclerView>

</LinearLayout>